syntax = "proto3";
package recharge;

// 请求购物列表；
message ShoppingListRequest
{
    uint32 system_type = 1;     // 充值系统，0：安卓，1：苹果；
    uint32 app_id = 2;
}

// 充值内容
message ShoppingItemData
{
    float amount = 1;
    uint32 gold_0 = 2;
    uint32 gold_1 = 3;
    uint32 gold = 4;
}

// 购物对象
message ShoppingItem
{
    string name = 1;
    repeated ShoppingItemData item_data = 2;
}

// 返回购物列表
message ShoppingListResponse
{
    uint32 code = 1;
    repeated ShoppingItem shopping_item = 2;
}

// 微信支付请求的数据
message PayWechatVersionRequest
{
    float amount = 1;       // 充值金额
    int32 pf_id = 2;        // 充值平台，1,安卓；2，iOS
    string uid = 3;         // 充值 uid
    uint32 app_id = 4;      // APP ID
}


// 支付返回的数据
message PayResponse
{
    uint32 code = 1;        // 1 为正常返回
    string result = 2;      // 返回充值的 JSON 数据
    uint32 pay_type = 3;                // 充值类型，1 微信支付，2，支付宝 andriod 支付；3，支付宝 iOS 支付
}

// 微信支付返回的数据
message PayWechatVersionResponse
{
    uint32 code = 1;                    // 1 为正常返回
    string result = 2;                  // 返回充值的 JSON 数据
//    string wechat_app_id = 2;           // 微信 appid
//    string wechat_partnerid = 3;        // 商户 ID
//    string wechat_prepayid = 4;         // 微信生成的支付 ID
//    string noncestr = 5;                // 随机字符串
//    int32 timestamp = 6;                // 时间戳
//    string package = 7;                 // 固定的包名
//    string sign = 8;                    // 加密串
}
// 支付宝请求的数据
message AlipayVersionRequest
{
    float amount = 1;       // 充值金额
    int32 pf_id = 2;        // 充值平台，1,安卓；2，iOS
    string uid = 3;         // 充值 uid
    uint32 app_id = 4;      // APP ID
}

// 支付宝返回的数据，andriod 版
message AlipayVersionResponse
{
    uint32 code = 1;
    string alipay_req = 2;      // 生成的请求串
}

// 支付宝返回的数据，iOS 版
message IOSAlipayVersionResponse
{
    uint32 code = 1;            // 1 为正常返回
    string order_number = 2;    // 生成的订单号
    string goods_name = 3;      // 商品名
    string details = 4;         // 商品详情
    float price = 5;            // 充值金额
    string callback = 6;        // 回调地址
}

// 玩吧支付请求的数据
message WanbaPayRequest
{
		string uid = 1;         // 充值 uid
		string open_id = 2;         // open_id    
    int32 zone_id = 3;        // 充值平台，1,安卓；2，iOS
    uint32 app_id = 4;      // APP ID
    uint32 good_id = 5;       // 商品ID    
}


// 请求支付心跳
message PayHeartbeatRequest
{
    string order_number = 1;    // 订单号
}

// 返回支付心跳
message PayHeartbeatResponse
{
    string status = 1;      // 返回支付状态,0 未支付，1 已经支付成功；2 用户放弃支付
}

// 绑定代理 ID
message BindIdRequest
{
    uint32 aid = 1;         // 绑定的渠道 ID
    string user_id = 2;     // 用户 ID
    uint32 app_id = 3;      // APP ID
}

// 绑定代理返回的数据
message BindIdResponse
{
    uint32 code = 1;         // 1 为绑定成功
    uint32 agent_id = 2;    // 代理商
    float gift_gold = 3;    // 赠送的金币
}
